# dev-killer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/rules/: async-patterns.md  cli.md  error-handling.md  logging.md  performance.md  project-structure.md  rust-style.md  testing.md
.claude/skills/code-review/: SKILL.md
.claude/skills/iterative-code-review/: SKILL.md
.github/workflows/: ci.yml
dev-killer/: Cargo.toml
dev-killer-cli/: Cargo.toml
dev-killer-cli/src/: main.rs
dev-killer/src/: builder.rs  dev_killer.rs  error.rs  event.rs  lib.rs  pipeline.rs  run_handle.rs
dev-killer/src/agents/: coder.rs  mod.rs  orchestrator.rs  planner.rs  reviewer.rs  runner.rs  tester.rs
dev-killer/src/config/: mod.rs
dev-killer/src/llm/: anthropic.rs  message.rs  provider.rs  retry.rs
dev-killer/src/runtime/: executor.rs
dev-killer/src/session/: mod.rs  sqlite.rs  state.rs  storage.rs
dev-killer/src/tools/: registry.rs  search.rs  shell.rs
src/: lib.rs  main.rs
src/agents/: coder.rs  message.rs  mod.rs  orchestrator.rs  planner.rs  reviewer.rs  runner.rs  tester.rs
src/config/: policy.rs  project.rs
src/llm/: anthropic.rs  message.rs  mod.rs  provider.rs  retry.rs  tool_call.rs
src/runtime/: executor.rs
src/session/: mod.rs  sqlite.rs  state.rs  storage.rs
src/tools/: file.rs  mod.rs  registry.rs  search.rs  shell.rs
tests/: e2e_agent_pipeline.rs  e2e_cli.rs  e2e_live.rs  e2e_session.rs
tests/common/: mod.rs
