[package]
name = "dev-killer-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "dev-killer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dev-killer = { path = "../dev-killer" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
